Version 1.0.0
classes which names contained Dto renamed to DTO.
Code optimized and all business logic from controllers moved into services.
Exceptions that might`ve been thrown by services been handled.